# GRSIData

./: .clang-tidy  .gitignore  .mega-linter.yml  CMakeLists.txt  GenerateVersionHeader.cmake  README.md  makefile
.github/workflows/: mega-linter.yml
histos/: MakeGriffinHistograms.cxx
include/: GRSIDataVersion.h.in  TAngularCorrelation.h  TAries.h  TAriesHit.h  TCSM.h  TCSMHit.h  TDemand.h  TDemandHit.h  TDescant.h  TDescantHit.h  TEmma.h  TEmmaHit.h  TGRSIDataParser.h  TGRSIDataParserException.h  TGRSIDetectorHit.h  TGRSIDetectorInformation.h  TGRSIMnemonic.h  TGenericDetector.h  TGriffin.h  TGriffinAngles.h  TGriffinBgo.h  TGriffinBgoHit.h  TGriffinHit.h  TLaBr.h  TLaBrBgo.h  TLaBrBgoHit.h  TLaBrHit.h  TMidasBanks.h  TMidasEvent.h  TMidasEventHeader.h  TMidasFile.h  TMidasStructs.h  TPaces.h  TPacesHit.h  TRF.h  TRcmp.h  TRcmpHit.h  TS3.h  TS3Hit.h  TSceptar.h  (+23 more)
libraries/TGRSIAnalysis/TAngularCorrelation/: LinkDef.h  TAngularCorrelation.cxx
libraries/TGRSIAnalysis/TAries/: LinkDef.h  TAries.cxx  TAriesHit.cxx
libraries/TGRSIAnalysis/TCSM/: LinkDef.h  TCSM.cxx  TCSMHit.cxx
libraries/TGRSIAnalysis/TDemand/: LinkDef.h  TDemand.cxx  TDemandHit.cxx
libraries/TGRSIAnalysis/TDescant/: LinkDef.h  TDescant.cxx  TDescantHit.cxx
libraries/TGRSIAnalysis/TEmma/: LinkDef.h  TEmma.cxx  TEmmaHit.cxx
libraries/TGRSIAnalysis/TGRSIDetector/: LinkDef.h  TGRSIDetectorHit.cxx
libraries/TGRSIAnalysis/TGenericDetector/: LinkDef.h  TGenericDetector.cxx
libraries/TGRSIAnalysis/TGriffin/: LinkDef.h  TGriffin.cxx  TGriffinAngles.cxx  TGriffinBgo.cxx  TGriffinBgoHit.cxx  TGriffinHit.cxx
libraries/TGRSIAnalysis/TLaBr/: LinkDef.h  TLaBr.cxx  TLaBrBgo.cxx  TLaBrBgoHit.cxx  TLaBrHit.cxx
libraries/TGRSIAnalysis/TPaces/: LinkDef.h  TPaces.cxx  TPacesHit.cxx
libraries/TGRSIAnalysis/TRF/: LinkDef.h  TRF.cxx
libraries/TGRSIAnalysis/TRcmp/: LinkDef.h  TRcmp.cxx  TRcmpHit.cxx
libraries/TGRSIAnalysis/TS3/: LinkDef.h  TS3.cxx  TS3Hit.cxx
libraries/TGRSIAnalysis/TSceptar/: LinkDef.h  TSceptar.cxx  TSceptarHit.cxx
libraries/TGRSIAnalysis/TSharc/: LinkDef.h  TSharc.cxx  TSharcHit.cxx
libraries/TGRSIAnalysis/TSharc2/: LinkDef.h  TSharc2.cxx  TSharc2Hit.cxx
libraries/TGRSIAnalysis/TSiLi/: LinkDef.h  TSiLi.cxx  TSiLiHit.cxx
libraries/TGRSIAnalysis/TTAC/: LinkDef.h  TTAC.cxx  TTACHit.cxx
libraries/TGRSIAnalysis/TTigress/: LinkDef.h  TTigress.cxx  TTigressBgo.cxx  TTigressBgoHit.cxx  TTigressHit.cxx
libraries/TGRSIAnalysis/TTip/: LinkDef.h  TTip.cxx  TTipHit.cxx
libraries/TGRSIAnalysis/TTriFoil/: LinkDef.h  TTriFoil.cxx
libraries/TGRSIAnalysis/TTrific/: LinkDef.h  TTrific.cxx  TTrificHit.cxx
libraries/TGRSIAnalysis/TZeroDegree/: LinkDef.h  TZeroDegree.cxx  TZeroDegreeHit.cxx
libraries/TGRSIDataParser/: TGRSIDataParser.cxx  TGRSIDataParserException.cxx
libraries/TGRSIFormat/: CMakeLinkDef.h  LinkDef.h  TGRSIDetectorInformation.cxx  TGRSIMnemonic.cxx
libraries/TMidas/: LinkDef.h  TMidasEvent.cxx  TMidasFile.cxx  TXMLOdb.cxx
libraries/TTriumfDataParser/: TTriumfDataParser.cxx  TTriumfDataParserException.cxx
src/: GRSIDataLibrary.cxx  TriumfLibrary.cxx
util/: AngularCorrelations.cxx  Deadtime.cxx  ExamineMidasFile.cxx  FixRunInfo.cxx  GainMatchGRIFFIN.cxx  GenerateAngularCorrelation.cxx  GetTreeEntries.cxx  GriffinCTFix.cxx  LeanComptonMatrices.cxx  SimulationAngularCorrelation.cxx  bufferclean.cxx  checkSort.cxx  checkSortFast.cxx  config  gen_version.sh  html_generator.C  offsetadd.cxx  offsetfind.cxx  offsetfindtree.C  offsetfix.cxx  tac_calibrator.cxx  write_cal.cxx
